We cannot use getFirst with JDK11